tests/snapshots/examples_fixtures/aoc__2025__aoc_day11_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day11_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day11_haskell_style.flx:43:29
   |
43 | parse_graph(lines, idx + 1, put(g, name, outs))
   |                             ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day11_haskell_style.flx:53:11
   |
53 |     (r.0, put(r.1, key, r.0))
   |           ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_haskell_style.flx:66:11
   |
66 |     match get(graph, node) {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_haskell_style.flx:76:11
   |
76 |     match get(memo, node) {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_haskell_style.flx:109:11
    |
109 |     match get(graph, node) {
    |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_haskell_style.flx:123:11
    |
123 |     match get(memo, key) {
    |           ^^^

Hint:
  Define it first: let get = ...;

Found 6 errors.
== stdout ==
<not executed>
